update version 1.0.3 1- Changed http client to fix android issues 2- Added getCountries method 3- Changed array to list in Country and State